@@ -1,4 +1,6 @@
-2666 [OneClick]+[ChapterCreator] improved title selector for DVD/Blu-ray sources
+2667 [TitleSelector]        added support for multi-angle DVD sources
+     [OneClick]             added support for multi-angle DVD sources
+2666 [TitleSelector]        improved title selector for DVD/Blu-ray sources
 2665 [OneClick]             added support for folders as drag&drop source of the input control
 2664 [IFOParser]            improved type detection
 2663 [FileIndexer]          fixed processing of DVDs with only one PGC (regression of 2658)
